--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,105 @@
-#root {
-  margin: 0 auto;
-  max-width: 1280px;
-  padding: 2rem;
+:root {
+  --color-base-bg: #202124;
+  --color-text: #cecaca;
+  --color-h1: #78b5f7;
+  --color-clear: #393938;
+  --color-line: #cccccb;
+  --color-container: #fff;
+  --color-in: #fefcdc;
+  --font-size: 1rem;
+  --font-family: Sans-serif;
+}
+
+html,
+body {
+  background-color: var(--color-base-bg);
+  box-sizing: border-box;
+  color: var(--color-text);
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+}
+
+p {
+  box-sizing: border-box;
+  color: var(--color-text);
+  font-family: var(--font-family);
+  font-size: 0.87rem;
+  margin: 1rem 0 0 0;
+  padding: 0;
   text-align: center;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  transition: filter 300ms;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.title {
+  box-sizing: border-box;
+  color: var(--color-h1);
+  font-family: var(--font-family);
+  font-size: 3rem;
+  margin: 1rem 0 0 0;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.place {
+  box-sizing: border-box;
+  color: var(--color-h1);
+  font-family: var(--font-family);
+  font-size: 2rem;
+  margin: 1rem 0 0 0;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.day {
+  box-sizing: border-box;
+  color: var(--color-h1);
+  font-family: var(--font-family);
+  font-size: 1rem;
+  margin: 1rem 0 0 0;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
-.card {
-  padding: 2em;
+.container {
+  box-sizing: border-box;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  justify-content: center;
+  min-height: 100%;
+  padding: 1rem 1rem 0 1rem;
+  width: 100%;
 }
 
-.read-the-docs {
-  color: #888;
+.containerDay {
+  align-items: center;
+  border: transparent solid 1px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+  transition: border 0.5s ease-in;
 }
+
+.containerDay:hover {
+  border: var(--color-in) solid 1px;
+}
+
+   @media screen and (min-width: 704px) {
+    .container {
+      align-items: center;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(1, 1fr);
+      justify-content: center;
+    } 
+  
+  } 
+
+  
