Render forecast of 7 days

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@ p {
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
+img {
+  width: 100%;
+}
+
 .title {
   box-sizing: border-box;
   color: var(--color-h1);
@@ -48,7 +52,7 @@ p {
   box-sizing: border-box;
   color: var(--color-h1);
   font-family: var(--font-family);
-  font-size: 2rem;
+  font-size: 1.2rem;
   margin: 1rem 0 0 0;
   padding: 0;
   text-align: center;
@@ -69,11 +73,16 @@ p {
 .container {
   box-sizing: border-box;
   display: grid;
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   justify-content: center;
   min-height: 100%;
   padding: 1rem 1rem 0 1rem;
   width: 100%;
+}
+
+.containerIcon {
+  height: 100px;
+  width: 100px;
 }
 
 .containerDay {
@@ -95,8 +104,8 @@ p {
    @media screen and (min-width: 704px) {
     .container {
       align-items: center;
-      grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: repeat(1, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
       justify-content: center;
     } 
   
