--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ button {
 
 .place {
   box-sizing: border-box;
-  color: var(--color-h1);
+  color: var(--color-text);
   font-family: var(--font-family);
   font-size: 1.2rem;
   margin: 1rem 0 0 0;
@@ -67,6 +67,17 @@ button {
 .day {
   box-sizing: border-box;
   color: var(--color-h1);
+  font-family: var(--font-family);
+  font-size: 1rem;
+  margin: 1rem 0 0 0;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
+}
+
+.description {
+  box-sizing: border-box;
+  color: var(--color-text);
   font-family: var(--font-family);
   font-size: 1rem;
   margin: 1rem 0 0 0;
